--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script>
+  <script src="https://cdn.rawgit.com/jquery/esprima/2.7.2/esprima.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body ng-controller="MainController">
@@ -18,6 +19,7 @@
   <div class="main">
     <h3>Input Code</h3>
     <textarea ng-model="userCode" ng-model-options="{debounce: 500}"></textarea>
+    <div class="syntaxTree">{{syntaxTree}}</div>
   </div>
 </body>
 </html>
