--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.7.0/lodash.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script>
-  <script src="https://cdn.rawgit.com/jquery/esprima/2.7.2/esprima.js"></script>
+  <script src="//cdn.rawgit.com/jquery/esprima/2.7.2/esprima.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body ng-controller="MainController">
@@ -19,6 +20,13 @@
   <div class="main">
     <h3>Input Code</h3>
     <textarea ng-model="userCode" ng-model-options="{debounce: 500}"></textarea>
+    <div class="feedback">
+      <h3>Function List</h3>
+      <div class="function" ng-repeat="function in functions">
+        <span>function </span>
+        <span ng-if="function.id.name" class="name">{{function.id.name}}</span>
+      </div>
+    </div>
     <div class="syntaxTree">{{syntaxTree}}</div>
   </div>
 </body>
