--- a/app/index.html
+++ b/app/index.html
@@ -23,10 +23,16 @@
     <div class="feedback">
       <div ng-show="errors" class="errors">{{errors}}</div>
       <br>
-      <h3>Function List</h3>
-      <div class="function" ng-repeat="function in functions">
-        <span>function </span>
-        <span ng-if="function.id.name" class="name">{{function.id.name}}</span>
+      <div ng-show="functions.length > 0">
+        <div class="validObject" ng-repeat="function in functions">
+          <span>function </span>
+          <span ng-if="function.id.name" class="name">{{function.id.name}}</span>
+        </div>
+      </div>
+      <div ng-show="ifStatements.length > 0">
+        <div class="validObject" ng-repeat="statement in ifStatements">
+          <span>if statement </span>
+        </div>
       </div>
     </div>
     <div class="syntaxTree">{{syntaxTree}}</div>
