--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script>
   <script src="//cdn.rawgit.com/jquery/esprima/2.7.2/esprima.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/mainController.js"></script>
+  <script src="js/mainService.js"></script>
 </head>
 <body ng-controller="MainController">
   <div class="header">
