--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.7.0/lodash.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script>
-  <script src="//cdn.rawgit.com/jquery/esprima/2.7.2/esprima.js"></script>
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.7.0/lodash.js"></script> -->
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script> -->
+  <!-- <script src="//cdn.rawgit.com/jquery/esprima/2.7.2/esprima.js"></script> -->
+  <script src="js/lodash.js"></script>
+  <script src="js/angular.js"></script>
+  <script src="js/esprima.js"></script>
   <script src="js/app.js"></script>
   <script src="js/mainController.js"></script>
   <script src="js/mainService.js"></script>
@@ -28,7 +31,7 @@
       <textarea class="blacklist-input" ng-model="blacklistedItems" ng-model-options="{debounce: 500}" placeholder="Example: if, for, while"></textarea>
     </div>
     <h3>Input Code</h3>
-    <textarea ng-model="userCode" ng-model-options="{debounce: 2000}"></textarea>
+    <textarea ng-model="userCode" ng-model-options="{debounce: 2000}" ng-class="{blacklisted: blacklistedItems.length > 0}"></textarea>
     <div class="feedback">
       <div ng-show="errors" class="errors">{{errors}}</div>
       <div ng-show="blacklistMessages.length > 0" class="blacklist-error" ng-repeat="message in blacklistMessages">{{message.text}}</div>
