Added basic whitelist code and wired up to view. Modified styling and added green success color.

--- a/app/index.html
+++ b/app/index.html
@@ -23,30 +23,21 @@
     <h1>Challenge App</h1>
   </div>
   <div class="main">
+    <h3>Settings</h3>
     <div>
-      <h3>Settings</h3>
-      <!-- <input type="checkbox" value="false" ng-model="ifNotAllowed">
-      <label>If statements not allowed</label> -->
       <label>Enter blacklisted statements, separated by commas</label>
       <textarea class="blacklist-input" ng-model="blacklistedItems" ng-model-options="{debounce: 500}" placeholder="Example: if, for, while"></textarea>
     </div>
+    <div>
+      <label>Enter whitelisted statements, separated by commas</label>
+      <textarea class="whitelist-input" ng-model="whitelistedItems" ng-model-options="{debounce: 500}" placeholder="Example: if, for, while"></textarea>
+    </div>
     <h3>Input Code</h3>
-    <textarea ng-model="userCode" ng-model-options="{debounce: 2000}" ng-class="{blacklisted: blacklistMessages.length > 0}"></textarea>
+    <textarea ng-model="userCode" ng-model-options="{debounce: 1000}" ng-class="{blacklisted: blacklistMessages.length > 0}"></textarea>
     <div class="feedback">
       <div ng-show="errors" class="errors">{{errors}}</div>
       <div ng-show="blacklistMessages.length > 0" class="blacklist-error" ng-repeat="message in blacklistMessages">{{message.text}}</div>
-      <br>
-      <div ng-show="functions.length > 0">
-        <div class="codeObject" ng-repeat="function in functions">
-          <span>function </span>
-          <span ng-if="function.id.name" class="name">{{function.id.name}}</span>
-        </div>
-      </div>
-      <div ng-show="ifStatements.length > 0">
-        <div class="codeObject" ng-class="{validObject: !ifNotAllowed, invalidObject: ifNotAllowed}" ng-repeat="statement in ifStatements">
-          <span>if statement </span>
-        </div>
-      </div>
+      <div ng-show="whitelistMessages.length > 0" class="whitelist-message" ng-repeat="message in whitelistMessages">{{message.text}}</div>
     </div>
     <div class="syntaxTree">{{syntaxTree}}</div>
   </div>
