--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
       <div ng-show="sharedItems.length > 0" class="shared-item-message" ng-repeat="item in sharedItems">Settings Error: The same statement ({{item}}) is both required and not permitted.</div>
       <div ng-show="checkedWhitelistStructures.length > 0 && structure.structureFound" class="whitelist-message" ng-repeat="structure in checkedWhitelistStructures">You met the requirement to have a {{structure.child}} inside a {{structure.parent}}.</div>
     </div>
-    <div class="syntaxTree">{{syntaxTree}}</div>
+    <!-- <div class="syntaxTree">{{syntaxTree}}</div> -->
   </div>
 </body>
 </html>
