removed console log statements from code

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <h3>Instructions</h3>
     <p>Use the settings boxes below to test the code by providing an individual item or comma separated list. The settings will be automatically parsed and checked against the code using Angular's watch cycle.</p>
     <p>Supported items are: if, for, forin, function, var, while.</p>
-    <p>Structure is indicated with parent, thin arrow, then child: example "if -> var"
+    <p>Direct structure is indicated with parent, thin arrow, then child: example "if -> var"
     <div class="settings-section">
       <h4>Blacklist</h4>
       <textarea class="blacklist-input" ng-model="blacklistedItems" ng-model-options="{debounce: 500}" placeholder="Example: if, for, while"></textarea>
