--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <title>Challenge App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="app/styles/main.css">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/4.8.2/lodash.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script>
   <script src="//cdn.rawgit.com/jquery/esprima/2.7.2/esprima.js"></script>
-  <!--<script src="js/lodash.js"></script>
-  <script src="js/angular.js"></script>
-  <script src="js/esprima.js"></script>-->
-  <script src="js/app.js"></script>
-  <script src="js/mainController.js"></script>
-  <script src="js/mainService.js"></script>
+  <!--<script src="app/js/lodash.js"></script>
+  <script src="app/js/angular.js"></script>
+  <script src="app/js/esprima.js"></script>-->
+  <script src="app/js/app.js"></script>
+  <script src="app/js/mainController.js"></script>
+  <script src="app/js/mainService.js"></script>
 </head>
 <body ng-controller="MainController">
   <div class="header">
